Fix appearance issues on Firefox

--- a/src/components/FileInput.css
+++ b/src/components/FileInput.css
@@ -1,5 +1,6 @@
 #file-input {
     margin: 30px 0 0 100px;
+    width: 300px;
     position: absolute;
 }
 
